# DjangoProjectMIPT

./: db.sqlite3  manage.py  pyproject.toml
cobra_project_app/: apps.py  forms.py  models.py
cobra_project_app/migrations/: 0001_initial.py
cobra_project_site/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base_page.html  home_page.html  login.html  register.html  test.html  test_compiling.html
