[project]
name = "cobraproject"
version = "0.1.0"
description = "Simple Dimpl"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIPT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "django (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
